Restructure project for gradle, upgrade deps/java targets, add more functions.